EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==7/27/2009==
gaeorn: changes to login server to compile under linux. added linux makefile for linux. converted utf16 sql files to normal ascii text.

==7/26/2009==
AndMetal: AGI Penalty for being encumbered now matches the Titanium client. The old formula was much higher than the client was reporting.
AndMetal: Added InLiquid() function to the WaterMap class. Will return true if you're in Water or Lava (or both?)
AndMetal: Converted to some more Message Strings in zone/spells.cpp.
AndMetal: Changed GetNextAvailableSpellBookSlot() & FindSpellBookSlotBySpellID() to return a result much faster.
AndMetal: The scribespells commands/quest functions should no longer overwrite existing spells & will use only unused book slots.
KLS: Added #path resort nodes to facilitate with keeping the pathing nodes in order.
KLS: Fix for crash from adding/removing nodes.
KLS: Combat range will now check the z axis as well.

==7/25/2009==
KLS: Added a much more accurate but slower Hazard Detection algorithm for #path process that will calculate water and very spikey terrain between two points, other instances of PathManager::NoHazards untouched.
KLS: Added #path move and #path disconnect all.

==7/24/2009==
Derision: Moved RecalcWeight to after CalcAABonuses in bonuses.cpp because valgrind complained aabonuses.packrat was used uninitialised.
Derision: Fixed memory leak in /who all processing.
KLS: Added functionality to #path to faciliate making .path files in game, including a very CPU intensive #path process filename which will try to create a connected path from unconnected laid out nodes.
KLS: /find will now do a hazards check.

==7/22/2009==
realityincarnate: Added quest::factionvalue() command to give more logical faction values than the client uses (Scowling = 1, Ally = 9)

==07/21/2009==